--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
     "leaflet": "^1.6.0",
+    "leaflet.heat": "^0.2.0",
     "numeral": "^2.0.6",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
